--- a/apps/starbit-destroyers/package.json
+++ b/apps/starbit-destroyers/package.json
@@ -50,6 +50,7 @@
     "components-storybook": "workspace:*",
     "components-ui-html": "workspace:*",
     "components-ui-pixi": "workspace:*",
+    "firebase": "^12.6.0",
     "svelte-i18n-lingui": "^0.2.2",
     "typia": "^10.0.2",
     "xstate": "5.24.0"
